# llm-architecture-forge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
libs/prompt-chain/: README.md  pyproject.toml
libs/prompt-chain/src/prompt_chain/: __init__.py  chain.py  client.py  models.py
projects/analyzer/: .env.example  requirements.txt
projects/analyzer/input/: Gold-architecture.txt
projects/analyzer/output/: evaluation_output(claude).md  evaluation_output(gemini).md  evaluation_output(gpt).md  evaluation_output(local-claude).md  evaluation_output(local-gemini).md  evaluation_output(local-gpt).md
projects/analyzer/src/: critique_architecture.py  main.py
projects/synthesizer/: architecture_output.md  architecture_output_pierwsza_wersja_z_gorszym_promptem.md  critique_output.md  evaluation_output.md  input_requirements.txt  requirements.txt  weak_architecture.txt
projects/synthesizer/input/: artifact_r2_claude-sonnet-4-6.json  artifact_r2_gemini-3-flash-preview.json  artifact_r2_gpt-5.4.json
projects/synthesizer/output/: architecture_output(claude).md  architecture_output(gemini).md  architecture_output(gpt).md  architecture_output(local-claude).md  architecture_output(local-gemini).md  architecture_output(local-gpt).md
projects/synthesizer/src/: critique_architecture.py  evaluate_architecture.py  main.py
