[project]
name = "prompt-chain"
version = "0.1.0"
description = "A shared library for LLM prompt chaining"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "google-genai>=1.69.0",
    "openai>=2.30.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
